[package]
name = "workshop"
license = "MIT OR Apache-2.0"
description = "An unopinionated collection of testing and tooling libraries, with integrations and adapters"
version = "0.1.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# The default set of crates
default = [
    "use_yare"
]

# supported options for parameterized_options testing
use_parameterized = ["parameterized"]
use_yare = ["yare"]

# supported options for assertion libraries
# tbd

# supported options for stubs/mocks/fakes/...
# tbd

[dependencies.yare]
version = "1.0.0"
optional = true

[dependencies.parameterized]
version = "0.2.0"
optional = true



